Added 'Author' field to Product (Task 1)

--- a/src/Presentation/Nop.Web/Views/Product/ProductTemplate.Simple.cshtml
+++ b/src/Presentation/Nop.Web/Views/Product/ProductTemplate.Simple.cshtml
@@ -68,6 +68,10 @@
                             <h1>
                                 @Model.Name
                             </h1>
+                            <!--Added for the Task 1-->
+                            <h3>
+                                @Model.Author
+                            </h3>
                         </div>
                         @if (!string.IsNullOrEmpty(Model.ShortDescription))
                         {
