--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -213,6 +213,15 @@
             </div>
             <div class="form-group">
                <div class="col-md-3">
+                   <nop-label asp-for="@Model.Locales[item].Author" />
+               </div>
+               <div class="col-md-9">
+                   <nop-editor asp-for="@Model.Locales[item].Author" />
+                   <span asp-validation-for="@Model.Locales[item].Author"></span>
+               </div>
+            </div>
+            <div class="form-group">
+               <div class="col-md-3">
                    <nop-label asp-for="@Model.Locales[item].ShortDescription" />
                </div>
                <div class="col-md-9">
@@ -240,6 +249,15 @@
                <div class="col-md-9">
                    <nop-editor asp-for="Name" asp-required="true" />
                    <span asp-validation-for="Name"></span>
+               </div>
+            </div>
+            <div class="form-group">
+               <div class="col-md-3">
+                   <nop-label asp-for="Author" />
+               </div>
+               <div class="col-md-9">
+                   <nop-editor asp-for="Author" />
+                   <span asp-validation-for="Author"></span>
                </div>
             </div>
             <div class="form-group">
@@ -518,7 +536,7 @@
         <div class="col-md-9">
             <div class="row">
                 <div class="col-md-4">
-                    <nop-select asp-for="SelectedCustomerRoleIds" asp-items="Model.AvailableCustomerRoles" asp-multiple="true"/>
+                    <nop-select asp-for="SelectedCustomerRoleIds" asp-items="Model.AvailableCustomerRoles" asp-multiple="true" />
                     <script>
                         $(document).ready(function() {
                             var rolesIdsInput = $('#@Html.IdFor(model => model.SelectedCustomerRoleIds)')
